gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15704.d
version https://git-lfs.github.com/spec/v1
oid sha256:bee83aae58f4784130a3f614ee4de2a322be3faec70ca2a6d0d4267cbb6551e9
size 360
